<resources>
    <string name="app_name">ColorMyViews</string>
    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box Five</string>
    <string name="btn_red">RED</string>
    <string name="btn_yellow">YELLOW</string>
    <string name="btn_green">GREEN</string>
    <string name="how_to_play">How to play</string>
    <string name="tap_boxes_buttons">Tap the screen and buttons and see the magic happen</string>
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
</resources>