<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_margin="@dimen/margin"
    >

    <TextView
        android:id="@+id/box_one_text"
        style="@style/WhiteBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/box_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/box_two_text"
        android:layout_width="130dp"
        android:layout_height="130dp"
        app:layout_constraintTop_toBottomOf="@id/box_one_text"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/WhiteBox"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/box_two"
        />

    <TextView
        android:id="@+id/box_three_text"
        style="@style/WhiteBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/box_three"
        app:layout_constraintBottom_toTopOf="@id/box_four_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/box_two_text"
        app:layout_constraintTop_toTopOf="@id/box_two_text"
        android:layout_marginStart="@dimen/margin"
        />

    <TextView
        android:id="@+id/box_four_text"
        style="@style/WhiteBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/box_four"
        app:layout_constraintBottom_toTopOf="@id/box_five_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/box_two_text"
        app:layout_constraintTop_toBottomOf="@id/box_three_text"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginVertical="@dimen/margin"
        />

    <TextView
        android:id="@+id/box_five_text"
        style="@style/WhiteBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/box_five"
        app:layout_constraintBottom_toBottomOf="@id/box_two_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/box_two_text"
        app:layout_constraintTop_toBottomOf="@id/box_four_text"
        android:layout_marginStart="@dimen/margin"
        />

    <TextView
        android:id="@+id/label_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/how_to_play"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/info_text"
        tools:layout_editor_absoluteY="348dp" />

    <TextView
        android:id="@+id/info_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/tap_boxes_buttons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/label_text"
        app:layout_constraintTop_toBottomOf="@id/box_two_text"
        app:layout_constraintVertical_bias="0.113" />

    <Button
        android:id="@+id/red_btn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/yellow_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/yellow_btn"
        android:text="@string/red"
        android:layout_marginStart="16dp"
        />

    <Button
        android:id="@+id/yellow_btn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/green_btn"
        app:layout_constraintStart_toEndOf="@id/red_btn" />

    <Button
        android:id="@+id/green_btn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/yellow_btn"
        app:layout_constraintBaseline_toBaselineOf="@id/yellow_btn"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/green"
        android:layout_marginEnd="16dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>